--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,15 @@
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: center;
+    
+    justify-content: left;
     align-items: center;
+    
 }
 #title{
+    
     position: absolute;
+    left:900px;
     top: 5px;
     font-size: 50px;
     font-weight: bold;
@@ -53,6 +57,7 @@
     grid-template-columns: repeat(18, 1fr);
 }
 #footer{
+    left:900px;
     position: absolute;
     bottom: 5px;
     font-size: 50px;
